
|==================|
|= CHANGELOG GEPI =|
|==================|

Gepi-1.6.9 (21/08/2016)
===========================
Carnets de notes:
- Possibilité d'afficher la date de fin de période dans la page index du Carnet 
  de notes professeur (pour visualiser lors de l'ajout d'évaluation, le temps 
  avant la fin de période).

Bulletins:
- Validation de corrections en attente: Affichage de témoins dans la page de 
  sélection des bulletins à imprimer.
- Affichage en page d'accueil administrateur et scolarité de tableaux:
    . des périodes ouvertes/fermées
    . de la visibilité des appréciations et avis du conseil de classe pour les 
      parents et élèves.
  L'affichage de ces tableaux peut être désactivé dans Gérer mon compte.
  Affichage pour le professeur principal du tableau de l'ouverture d'accès parents/élèves 
  aux avis et appréciations pour ses classes.
- Possibilité d'ouvrir l'accès parent/élève aux appréciations et avis élève par
  élève (pour les établissements dans lesquels les bulletins sont remis en mains 
  propres aux familles).
- Possibilité d'envoyer les bulletins aux familles par mail lors de l'archivage de fin d'année.
- Possibilité d'inclure la signature lors de l'archivage de fin d'année.
- Possibilité de saisir les Éléments de Programmes abordés, pour les faire apparaitre dans une colonne du bulletin.

Cahiers de textes:
- Possibilité de définir des Tag (Contrôle, EPI, AP) pour les notices de CDT.
- Possibilité de définir un proxy pour le téléchargement des images
  de formules mathématiques générées sur https://latex.codecogs.com

Absences2:
- Facilités de rattachement de saisies.
- Possibilité de restreindre aux seuls lundis, mardis,... la saisie d'absences pour des élèves
  (cas de répétition d'absences toutes les semaines sur tels créneaux).
- Affichage des manquements du jour sur la page d'accueil simplifiée parent.
- Possibilité de ne pas afficher par défaut les saisies englobées ou traitées.