@@ -253,6 +253,10 @@ if (isset ($_POST['maj'])) {
         require 'updates/168_to_169.inc.php';
 	}
 
+	if (($force_maj == 'yes') or (quelle_maj("master"))) {
+        require 'updates/169_to_dev.inc.php';
+	}
+
 	// Mise à jour du numéro de version
 	saveSetting("version", $gepiVersion);
 	saveSetting("pb_maj", $pb_maj);
